alertmanager/_kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-alertmanager
  namespace: devops
  labels:
    app: prometheus-alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-alertmanager
  template:
    metadata:
      labels:
        app: prometheus-alertmanager
    spec:
      containers:
      - name: prometheus-alertmanager
        securityContext:
          privileged: true
        image: prom/alertmanager:latest
#        imagePullPolicy: Always
        command:
          - "/bin/sh"
          - "-c"
          - >
            set -x;
            /bin/alertmanager --config.file=/etc/alertmanager/am/config.yaml
        ports:
        - containerPort: 9093
          name: prometheus
        resources:
#          requests:
#            cpu: 500m
#            memory: 2Gi
#          limits:
#            cpu: 1000m
#            memory: 2Gi
        volumeMounts:
        - name: alertmanager-config-volume
          mountPath: /etc/alertmanager/am
      volumes:
      - name: alertmanager-config-volume
        configMap:
          name: alertmanager-config
