alertmanager/_kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-alertmanager
  namespace: devops
  labels:
    app: prometheus-alertmanager
spec:
  ports:
  - name: prometheus-alertmanager-port
    port: 9093
    protocol: TCP
  type: NodePort # only use this to by-pass ingress
  selector:
    app: prometheus-alertmanager
