alertmanager/_kube/ingress.yml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-alertmanager
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-alertmanager.demo.com
    http:
      paths:
      - backend:
          serviceName: prometheus-alertmanager
          servicePort: 9093
